<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05253C"
    tools:context=".ui.ChooseLoginView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#05253C"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="242dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_universidad_modelo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_fisioEmailLogin"
            style="@style/CustomInputTextLayoutLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_fisioEmailLogin"
                style="@style/editTextLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_fisioPasswordLogin"
            style="@style/CustomInputTextLayoutLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_fisioPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextLight"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_fisioLoginToMenu"
            style="@style/buttonLightStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="36dp"
            android:text="@string/LogIn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_fisioLoginToNewAccount"
            style="?borderlessButtonStyle"
            android:height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/SignUp"
            app:rippleColor="@color/colorPrimaryLight"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>